--- a/src/styles/components/filterSide.module.scss
+++ b/src/styles/components/filterSide.module.scss
@@ -1,6 +1,45 @@
 .aSide {
-  height: 100%;
-  //   min-height: 100vh;
+  margin-block: 100px;
   width: 20%;
-  border: 1px solid aqua;
+  position: relative;
+  user-select: none;
+
+  .maniFilter {
+    height: 480px;
+    width: 300px;
+    position: sticky;
+    transition: all 300ms;
+    top: 50px;
+    margin-inline: auto;
+    border-radius: 5px;
+    background-color: rgba(#1f3d48, 0.5);
+    backdrop-filter: blur(20px);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+    h2 {
+      font-size: 1.1rem;
+      font-weight: 500;
+      margin-block: 20px 15px;
+    }
+
+    .sortItem {
+      width: 95%;
+      margin: 5px auto;
+      background-color: #01222c;
+      padding: 10px;
+      cursor: pointer;
+
+      .icon {
+        font-size: 0.8rem;
+        margin-right: 10px;
+      }
+
+      input {
+        margin-inline: 10px 4px;
+        cursor: pointer;
+      }
+    }
+  }
 }
