--- a/src/styles/components/movieCard.module.scss
+++ b/src/styles/components/movieCard.module.scss
@@ -19,8 +19,7 @@
     }
 
     .front {
-      background: center / cover
-        url(https://de.web.img2.acsta.net/pictures/14/10/24/13/14/481915.jpg);
+      background: center / cover var(--posterImg);
     }
 
     .back {
@@ -46,6 +45,7 @@
         display: grid;
         place-content: center;
         transition: all 300ms;
+        z-index: 2;
 
         &:hover {
           background-color: rgba(#000, 1);
@@ -73,6 +73,8 @@
 
         span {
           display: block;
+          text-align: center;
+          margin-bottom: 10px;
         }
       }
 
@@ -87,6 +89,22 @@
           transform: translateX(200px);
           transition: transform 500ms;
           transition-delay: 200ms;
+
+          &:nth-child(1) {
+            --num: 1;
+          }
+          &:nth-child(2) {
+            --num: 2;
+          }
+          &:nth-child(3) {
+            --num: 3;
+          }
+          &:nth-child(4) {
+            --num: 4;
+          }
+          &:nth-child(5) {
+            --num: 5;
+          }
         }
       }
     }
