--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -1,3 +1,5 @@
+@import "./../variables";
+
 .navMain {
   height: 80px;
   width: 100vw;
@@ -11,6 +13,7 @@
 
     li {
       cursor: pointer;
+      transition: all 300ms;
 
       &:first-child {
         margin-left: 50px;
@@ -18,10 +21,17 @@
 
       &:last-child {
         margin-inline: auto 50px;
+        height: 40px;
+        aspect-ratio: 1;
+        display: grid;
+        place-content: center;
+        border-radius: 50%;
+        background-color: $secondary-color;
       }
 
       &:hover {
         filter: brightness(2.5);
+        color: $primary-color;
       }
     }
   }
