--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -1,8 +1,10 @@
+@import "./../_variables.scss";
+
 .footer {
   height: 410px;
   width: 100vw;
   overflow: hidden;
-  // border: 1px solid red;
+  position: relative;
   background-image: linear-gradient(
     -175deg,
     #01222c,
@@ -46,6 +48,90 @@
       --top: 5px;
       animation: frameMove 20s linear infinite alternate;
     }
+  }
+
+  .siteMap {
+    width: 100%;
+    height: 280px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .footerColumn {
+      height: 100%;
+      width: 30%;
+      flex-wrap: wrap;
+      gap: 150px;
+
+      h2 {
+        font-size: 1.4rem;
+
+        .icon {
+          margin-right: 10px;
+          font-size: 0.9rem;
+          vertical-align: 1px;
+        }
+      }
+
+      &:first-child {
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+      }
+
+      li {
+        list-style: none;
+        cursor: pointer;
+        margin: 10px 20px;
+        transition: color 300ms;
+
+        &:hover {
+          color: $accent-color;
+        }
+      }
+
+      .subscribe {
+        font-size: 0.9rem;
+        width: 100%;
+      }
+
+      input {
+        all: unset;
+        margin-top: 20px;
+        height: 40px;
+        width: 300px;
+        background-color: #aaa;
+        color: #000;
+        padding-left: 10px;
+        border-radius: 5px 0 0 5px;
+
+        &:focus {
+          background-color: #fff;
+        }
+      }
+
+      button {
+        all: unset;
+        margin-top: 20px;
+        height: 40px;
+        width: 60px;
+        background-color: $secondary-color;
+        color: #fff;
+        padding-left: 10px;
+        border-radius: 0 5px 5px 0;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .copyRight {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 9px;
+    font-size: 0.8rem;
   }
 }
 
