--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -3,36 +3,56 @@
 .navMain {
   height: 80px;
   width: 100vw;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  position: relative;
 
-  ul {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    list-style: none;
-    gap: 50px;
+  .navGlass {
+    height: 30px;
+    position: absolute;
+    border-radius: 3px;
+    backdrop-filter: blur(0.7px);
+    // z-index: -1;
+    transition: all 300ms;
+    cursor: pointer;
+    background: linear-gradient(
+      25deg,
+      rgb(255 255 255 /0.3),
+      rgb(255 255 255 /0.1),
+      transparent,
+      transparent,
+      transparent,
+      rgb(255 255 255 /0.05),
+      rgb(255 255 255 /0.2),
+      rgb(255 255 255 /0.4)
+    );
+  }
 
-    li {
-      cursor: pointer;
-      transition: all 300ms;
+  a {
+    all: unset;
+    padding: 3px 8px;
+    cursor: pointer;
+    transition: all 300ms;
+    font-size: 1.1rem;
 
-      &:first-child {
-        margin-left: 50px;
-      }
+    &:nth-child(2) {
+      margin-left: 50px;
+    }
 
-      &:last-child {
-        margin-inline: auto 50px;
-        height: 40px;
-        aspect-ratio: 1;
-        display: grid;
-        place-content: center;
-        border-radius: 50%;
-        background-color: $secondary-color;
-      }
+    &:last-child {
+      margin-inline: auto 50px;
+      height: 40px;
+      aspect-ratio: 1;
+      display: grid;
+      place-content: center;
+      border-radius: 50%;
+      padding: 0;
+      background-color: $secondary-color;
+    }
 
-      &:hover {
-        filter: brightness(2.5);
-        color: $primary-color;
-      }
+    &:hover {
+      color: $accent-color;
     }
   }
 }
