--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,7 @@ main {
   }
 }
 
+/** Pagination */
 .pagination {
   height: 50px;
   width: 100%;
@@ -56,10 +57,20 @@ main {
   a {
     all: unset;
     cursor: pointer;
+    transition: color 300ms;
+
+    &:hover {
+      color: $accent-color;
+    }
+  }
+
+  .deActive {
+    cursor: not-allowed;
+    color: $secondary-color !important;
   }
 }
 
-/** alert */
+/** Alert */
 .alertMassage {
   background-color: rgba($color: $secondary-color, $alpha: 0.7) !important;
   color: $text-color !important;
@@ -67,7 +78,13 @@ main {
   font-size: 1.2rem !important;
 }
 
-/* Scroll */
+/** activeFilter */
+.activeFilter {
+  transition: all 300ms !important;
+  background-color: $accent-color !important;
+}
+
+/** Scroll */
 ::-webkit-scrollbar {
   width: 8px;
   height: 10px;
