--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -13,7 +13,7 @@
     position: absolute;
     border-radius: 3px;
     backdrop-filter: blur(0.7px);
-    // z-index: -1;
+    z-index: -1;
     transition: all 300ms;
     cursor: pointer;
     background: linear-gradient(
