--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -41,7 +41,7 @@
     }
 
     &:last-child {
-      margin-inline: auto 50px;
+      margin-inline: 50px;
       height: 40px;
       aspect-ratio: 1;
       display: grid;
@@ -53,6 +53,98 @@
 
     &:hover {
       color: $accent-color;
+    }
+  }
+
+  .searchBox {
+    margin-left: auto;
+    display: flex;
+    position: relative;
+
+    .searchBtn {
+      all: unset;
+      cursor: pointer;
+      width: 50px;
+      background-color: $secondary-color;
+      display: grid;
+      place-content: center;
+      border-radius: 0 5px 5px 0;
+      transition: all 300ms;
+
+      &:hover {
+        filter: brightness(1.2);
+      }
+    }
+
+    .trash {
+      color: $secondary-color;
+      position: absolute;
+      right: 60px;
+      top: 10px;
+      cursor: pointer;
+    }
+
+    .input {
+      all: unset;
+      background: #ccc;
+      height: 37px;
+      width: 350px;
+      color: $primary-color;
+      padding-inline: 10px;
+      font-size: 1.2rem;
+      transition: all 300ms;
+      border-radius: 5px 0 0 5px;
+
+      &:focus {
+        background-color: #fff;
+        width: 400px;
+      }
+    }
+
+    .searchResult {
+      max-height: 390px;
+      width: 100%;
+      position: absolute;
+      background-color: rgba($secondary-color, 0.5);
+      backdrop-filter: blur(10px);
+      top: 38px;
+      z-index: 9;
+      box-shadow: 0 1px 8px #aaa;
+      overflow-y: scroll;
+
+      &Card {
+        all: unset;
+        height: 70px;
+        width: 98%;
+        border-radius: 5px;
+        margin: 5px auto;
+        font-size: 1.1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(
+            to right,
+            $primary-color,
+            transparent,
+            $primary-color
+          ),
+          center / cover var(--bgImg);
+        cursor: pointer;
+        filter: grayscale(90%);
+        transition: all 300ms;
+
+        &:hover {
+          filter: grayscale(0);
+        }
+
+        h2 {
+          font-size: 1.2rem;
+          color: #fff;
+          width: 100%;
+          text-align: center;
+          background: linear-gradient(to left, transparent, #333, transparent);
+        }
+      }
     }
   }
 }
