--- a/src/styles/components/about.module.scss
+++ b/src/styles/components/about.module.scss
@@ -16,18 +16,26 @@
   );
 
   .aboutContent {
+    margin-inline: auto;
+    width: 100%;
+    font-size: 0.8rem;
+    background: rgba($secondary-color, 0.5);
+    border-radius: 5px;
+    padding: 10px;
+
+    @include MediaQuery(800px) {
+      width: 70%;
+    }
+
+    @include MediaQuery(460px) {
+      font-size: 1.2rem;
+      padding: 80px;
+    }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
       font-size: 2rem;
     }
-
-    margin-inline: auto;
-    width: 70%;
-    font-size: 1.2rem;
-    // font-weight: 300;
-    padding: 80px;
-    background: rgba($secondary-color, 0.5);
-    border-radius: 5px;
   }
 }
