--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -20,6 +20,11 @@
     #284551,
     #314e5a
   );
+  display: none;
+
+  @include MediaQuery(300px) {
+    display: block;
+  }
 
   .firstFrame {
     height: 30px;
@@ -54,9 +59,13 @@
     width: 100%;
     height: 280px;
     margin-top: 100px;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
+
+    @include MediaQuery(630px) {
+      display: flex;
+    }
 
     .footerColumn {
       height: 100%;
@@ -89,6 +98,13 @@
 
         &:hover {
           color: $accent-color;
+        }
+      }
+
+      &:last-child {
+        display: none;
+        @include MediaQuery(1270px) {
+          display: block;
         }
       }
 
