--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -5,6 +5,11 @@
   width: 90vw;
   margin: 50px auto;
   overflow: hidden;
+  display: none;
+
+  @include MediaQuery(516px) {
+    display: block;
+  }
 
   .slideShow {
     height: 100%;
