--- a/src/styles/components/movie.module.scss
+++ b/src/styles/components/movie.module.scss
@@ -2,39 +2,40 @@
 
 .mainMovie {
   min-height: 100vh;
-  width: 80%;
   min-width: 300px;
+  width: 100%;
   margin: 200px auto;
   position: relative;
 
-  .movieHeadMask {
-    min-height: 600px;
-    width: 100%;
-    --bgImg: "";
-    background: top var(--bgImg) no-repeat;
-    backdrop-filter: blur(20px);
-    position: relative;
-    border-radius: 5px;
+  @include MediaQuery(550px) {
+    width: 80%;
   }
 
   .headInfo {
     min-height: 600px;
     width: 100%;
-    position: absolute;
     border-radius: 5px;
-    top: 0;
-    left: 0;
     background: linear-gradient(
-      to left,
-      rgba($secondary-color, 0.7),
-      $secondary-color 80%
-    );
+        to left,
+        rgba($secondary-color, 0.7),
+        $secondary-color 80%
+      ),
+      top / cover var(--bgImg) no-repeat;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 10px;
     gap: 20px;
+    text-align: center;
+
+    @include MediaQuery(1250px) {
+      text-align: start;
+    }
+
+    @include MediaQuery(500px) {
+      padding: 50px;
+    }
 
     .poster {
       height: 350px;
