--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,8 @@
   font-family: "Source Sans 3", sans-serif;
 }
 
-body {
+body,
+html {
   background-color: $primary-color;
   color: $text-color;
   overflow-x: hidden;
@@ -35,13 +36,18 @@ main {
   );
 
   .content {
-    width: 70%;
+    width: 90%;
     height: 100%;
     padding-block: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+
+    @include MediaQuery(760px) {
+      width: calc(80% - 350px);
+      margin-left: 50px;
+    }
   }
 }
 
@@ -84,12 +90,37 @@ main {
   background-color: $accent-color !important;
 }
 
-/** */
+/** 404 Page */
 .main404 {
   height: calc(100vh - 490px);
   display: grid;
   place-content: center;
   font-size: 3rem;
+}
+
+/** active BurgerMenu */
+.activeBurger {
+  transition: all 300ms;
+  transform: rotate(180deg);
+
+  div {
+    background: transparent;
+
+    &:before {
+      transform: rotate(45deg);
+      top: 0;
+    }
+
+    &:after {
+      transform: rotate(-45deg);
+      top: 0;
+    }
+  }
+}
+
+.activeNavbar {
+  opacity: 1;
+  display: flex;
 }
 
 /** Scroll */
@@ -120,3 +151,5 @@ main {
 ::-moz-scrollbar-track {
   background: transparent;
 }
+
+/** MediaQuery */
