fix posution sticky

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,8 +12,7 @@
   font-family: "Source Sans 3", sans-serif;
 }
 
-body,
-html {
+body {
   background-color: $primary-color;
   color: $text-color;
   overflow-x: hidden;
