--- a/src/styles/components/filterSide.module.scss
+++ b/src/styles/components/filterSide.module.scss
@@ -2,6 +2,7 @@
 
 .aSide {
   margin-block: 100px;
+  width: 300px;
   position: relative;
   user-select: none;
   display: none;
@@ -11,11 +12,10 @@
   }
 
   .maniFilter {
-    width: 300px;
-    position: sticky;
-    transition: all 300ms;
+    width: 100%;
+    position: sticky !important;
+    transition: all 200ms;
     top: 50px;
-    margin-inline: auto;
     border-radius: 5px;
     background-color: rgba(#1f3d48, 0.5);
     backdrop-filter: blur(20px);
